系统软件架构实验/丁旭行 14184501 实验四/丁旭行 14184501 18计科一班 实验4代码/cgrammar-new.output
Grammar

    0 $accept: TransUnit $end

    1 PrimaryExp: IDENTIFIER
    2           | CONSTANT
    3           | STRING_LITERAL
    4           | '(' Exp ')'

    5 PostfixExp: PrimaryExp
    6           | PostfixExp '[' Exp ']'
    7           | PostfixExp '(' ')'
    8           | PostfixExp '(' ArgExpList ')'
    9           | PostfixExp '.' IDENTIFIER
   10           | PostfixExp PTR_OP IDENTIFIER
   11           | PostfixExp INC_OP
   12           | PostfixExp DEC_OP

   13 ArgExpList: AssignExp
   14           | ArgExpList ',' AssignExp

   15 UnaryExp: PostfixExp
   16         | INC_OP UnaryExp
   17         | DEC_OP UnaryExp
   18         | '&' CastExp
   19         | '*' CastExp
   20         | '+' CastExp
   21         | '-' CastExp
   22         | '~' CastExp
   23         | '!' CastExp
   24         | SIZEOF UnaryExp
   25         | SIZEOF '(' type_name ')'

   26 CastExp: UnaryExp
   27        | '(' type_name ')' CastExp

   28 CondExp: CastExp
   29        | CondExp '?' Exp ':' CondExp
   30        | CondExp OR_OP CondExp
   31        | CondExp AND_OP CondExp
   32        | CondExp '|' CondExp
   33        | CondExp '^' CondExp
   34        | CondExp '&' CondExp
   35        | CondExp EQ_OP CondExp
   36        | CondExp NE_OP CondExp
   37        | CondExp '<' CondExp
   38        | CondExp '>' CondExp
   39        | CondExp LE_OP CondExp
   40        | CondExp GE_OP CondExp
   41        | CondExp LEFT_OP CondExp
   42        | CondExp RIGHT_OP CondExp
   43        | CondExp '+' CondExp
   44        | CondExp '-' CondExp
   45        | CondExp '*' CondExp
   46        | CondExp '/' CondExp
   47        | CondExp '%' CondExp

   48 AssignExp: CondExp
   49          | UnaryExp '=' AssignExp
   50          | UnaryExp MUL_ASSIGN AssignExp
   51          | UnaryExp DIV_ASSIGN AssignExp
   52          | UnaryExp MOD_ASSIGN AssignExp
   53          | UnaryExp ADD_ASSIGN AssignExp
   54          | UnaryExp SUB_ASSIGN AssignExp
   55          | UnaryExp LEFT_ASSIGN AssignExp
   56          | UnaryExp RIGHT_ASSIGN AssignExp
   57          | UnaryExp AND_ASSIGN AssignExp
   58          | UnaryExp XOR_ASSIGN AssignExp
   59          | UnaryExp OR_ASSIGN AssignExp

   60 Exp: AssignExp
   61    | Exp ',' AssignExp

   62 ConstExp: CondExp

   63 Declaration: Declaration_Spec ';'
   64            | Declaration_Spec init_decl_s ';'

   65 Declaration_Spec: StorageSpec
   66                 | StorageSpec Declaration_Spec
   67                 | TypeSpec
   68                 | TypeSpec Declaration_Spec
   69                 | TypeQua
   70                 | TypeQua Declaration_Spec

   71 init_decl_s: init_decl
   72            | init_decl_s ',' init_decl

   73 init_decl: declarator
   74          | declarator '=' Init

   75 StorageSpec: TYPEDEF
   76            | EXTERN
   77            | STATIC
   78            | AUTO
   79            | REGISTER

   80 TypeSpec: VOID
   81         | CHAR
   82         | SHORT
   83         | INT
   84         | LONG
   85         | FLOAT
   86         | DOUBLE
   87         | SIGNED
   88         | UNSIGNED
   89         | StructUnionSpec
   90         | EnumSpec
   91         | TYPE_NAME

   92 TypeQua: CONST
   93        | VOLATILE

   94 TypeQua_s: TypeQua
   95          | TypeQua_s TypeQua

   96 StructUnionSpec: STRUCT IDENTIFIER '{' struct_Declaration_s '}'
   97                | STRUCT '{' struct_Declaration_s '}'
   98                | STRUCT IDENTIFIER
   99                | UNION IDENTIFIER '{' struct_Declaration_s '}'
  100                | UNION '{' struct_Declaration_s '}'
  101                | UNION IDENTIFIER

  102 struct_Declaration_s: struct_Declaration
  103                     | struct_Declaration_s struct_Declaration

  104 struct_Declaration: SpecQua_s struct_decl_s ';'

  105 SpecQua_s: TypeSpec SpecQua_s
  106          | TypeSpec
  107          | TypeQua SpecQua_s
  108          | TypeQua

  109 struct_decl_s: struct_decl
  110              | struct_decl_s ',' struct_decl

  111 struct_decl: declarator
  112            | ':' ConstExp
  113            | declarator ':' ConstExp

  114 EnumSpec: ENUM '{' Enum_s '}'
  115         | ENUM IDENTIFIER '{' Enum_s '}'
  116         | ENUM IDENTIFIER

  117 Enum_s: Enum
  118       | Enum_s ',' Enum

  119 Enum: IDENTIFIER
  120     | IDENTIFIER '=' ConstExp

  121 declarator: pointer direct_decl
  122           | direct_decl

  123 direct_decl: IDENTIFIER
  124            | '(' declarator ')'
  125            | direct_decl '[' ConstExp ']'
  126            | direct_decl '[' ']'
  127            | direct_decl '(' ParamType_s ')'
  128            | direct_decl '(' Ident_s ')'
  129            | direct_decl '(' ')'

  130 pointer: '*'
  131        | '*' TypeQua_s
  132        | '*' pointer
  133        | '*' TypeQua_s pointer

  134 ParamType_s: Param_s
  135            | Param_s ',' ELLIPSIS

  136 Param_s: Param_Declaration
  137        | Param_s ',' Param_Declaration

  138 Param_Declaration: Declaration_Spec declarator
  139                  | Declaration_Spec abs_decl
  140                  | Declaration_Spec

  141 Ident_s: IDENTIFIER
  142        | Ident_s ',' IDENTIFIER

  143 type_name: SpecQua_s
  144          | SpecQua_s abs_decl

  145 abs_decl: pointer
  146         | direct_abs_decl
  147         | pointer direct_abs_decl

  148 direct_abs_decl: '(' abs_decl ')'
  149                | '[' ']'
  150                | '[' ConstExp ']'
  151                | direct_abs_decl '[' ']'
  152                | direct_abs_decl '[' ConstExp ']'
  153                | '(' ')'
  154                | '(' ParamType_s ')'
  155                | direct_abs_decl '(' ')'
  156                | direct_abs_decl '(' ParamType_s ')'

  157 Init: AssignExp
  158     | '{' Init_s '}'
  159     | '{' Init_s ',' '}'

  160 Init_s: Init
  161       | Init_s ',' Init

  162 Stmt: IDENTIFIER ':' Stmt
  163     | CASE ConstExp ':' Stmt
  164     | DEFAULT ':' Stmt
  165     | Block
  166     | ';'
  167     | Exp ';'
  168     | IF '(' Exp ')' Stmt
  169     | IF '(' Exp ')' Stmt ELSE Stmt
  170     | SWITCH '(' Exp ')' Stmt
  171     | WHILE '(' Exp ')' Stmt
  172     | DO Stmt WHILE '(' Exp ')' ';'
  173     | FOR '(' Exp1 ';' Exp2 ';' Exp3 ')' Stmt
  174     | GOTO IDENTIFIER ';'
  175     | CONTINUE ';'
  176     | BREAK ';'
  177     | RETURN ';'
  178     | RETURN Exp ';'

  179 Exp1: /* empty */
  180     | Exp

  181 Exp2: /* empty */
  182     | Exp

  183 Exp3: /* empty */
  184     | Exp

  185 Block: '{' '}'
  186      | '{' Stmt_s '}'
  187      | '{' Declaration_s '}'
  188      | '{' Declaration_s Stmt_s '}'

  189 Declaration_s: Declaration
  190              | Declaration_s Declaration

  191 Stmt_s: Stmt
  192       | Stmt_s Stmt

  193 TransUnit: ExternalDef
  194          | TransUnit ExternalDef

  195 ExternalDef: FunctionDef
  196            | Declaration

  197 FunctionDef: FunctionDecl FunctionBody

  198 FunctionDecl: Declaration_Spec declarator Declaration_s
  199             | Declaration_Spec declarator
  200             | declarator Declaration_s
  201             | declarator

  202 FunctionBody: Block


Terminals, with rules where they appear

$end (0) 0
'!' (33) 23
'%' (37) 47
'&' (38) 18 34
'(' (40) 4 7 8 25 27 124 127 128 129 148 153 154 155 156 168 169 170
    171 172 173
')' (41) 4 7 8 25 27 124 127 128 129 148 153 154 155 156 168 169 170
    171 172 173
'*' (42) 19 45 130 131 132 133
'+' (43) 20 43
',' (44) 14 61 72 110 118 135 137 142 159 161
'-' (45) 21 44
'.' (46) 9
'/' (47) 46
':' (58) 29 112 113 162 163 164
';' (59) 63 64 104 166 167 172 173 174 175 176 177 178
'<' (60) 37
'=' (61) 49 74 120
'>' (62) 38
'?' (63) 29
'[' (91) 6 125 126 149 150 151 152
']' (93) 6 125 126 149 150 151 152
'^' (94) 33
'{' (123) 96 97 99 100 114 115 158 159 185 186 187 188
'|' (124) 32
'}' (125) 96 97 99 100 114 115 158 159 185 186 187 188
'~' (126) 22
error (256)
COLON (258)
OR_OP (259) 30
AND_OP (260) 31
NE_OP (261) 36
EQ_OP (262) 35
GE_OP (263) 40
LE_OP (264) 39
RIGHT_OP (265) 42
LEFT_OP (266) 41
IDENTIFIER (267) 1 9 10 96 98 99 101 115 116 119 120 123 141 142 162
    174
CONSTANT (268) 2
STRING_LITERAL (269) 3
SIZEOF (270) 24 25
PTR_OP (271) 10
INC_OP (272) 11 16
DEC_OP (273) 12 17
MUL_ASSIGN (274) 50
DIV_ASSIGN (275) 51
MOD_ASSIGN (276) 52
ADD_ASSIGN (277) 53
SUB_ASSIGN (278) 54
LEFT_ASSIGN (279) 55
RIGHT_ASSIGN (280) 56
AND_ASSIGN (281) 57
XOR_ASSIGN (282) 58
OR_ASSIGN (283) 59
TYPE_NAME (284) 91
TYPEDEF (285) 75
EXTERN (286) 76
STATIC (287) 77
AUTO (288) 78
REGISTER (289) 79
CHAR (290) 81
SHORT (291) 82
INT (292) 83
LONG (293) 84
SIGNED (294) 87
UNSIGNED (295) 88
FLOAT (296) 85
DOUBLE (297) 86
CONST (298) 92
VOLATILE (299) 93
VOID (300) 80
STRUCT (301) 96 97 98
UNION (302) 99 100 101
ENUM (303) 114 115 116
ELLIPSIS (304) 135
CASE (305) 163
DEFAULT (306) 164
IF (307) 168 169
ELSE (308) 169
SWITCH (309) 170
WHILE (310) 171 172
DO (311) 172
FOR (312) 173
GOTO (313) 174
CONTINUE (314) 175
BREAK (315) 176
RETURN (316) 177 178
LOWER_THAN_ELSE (317)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
PrimaryExp (88)
    on left: 1 2 3 4, on right: 5
PostfixExp (89)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
ArgExpList (90)
    on left: 13 14, on right: 8 14
UnaryExp (91)
    on left: 15 16 17 18 19 20 21 22 23 24 25, on right: 16 17 24 26
    49 50 51 52 53 54 55 56 57 58 59
CastExp (92)
    on left: 26 27, on right: 18 19 20 21 22 23 27 28
CondExp (93)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 47, on right: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 62
AssignExp (94)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59, on right: 13 14 49
    50 51 52 53 54 55 56 57 58 59 60 61 157
Exp (95)
    on left: 60 61, on right: 4 6 29 61 167 168 169 170 171 172 178
    180 182 184
ConstExp (96)
    on left: 62, on right: 112 113 120 125 150 152 163
Declaration (97)
    on left: 63 64, on right: 189 190 196
Declaration_Spec (98)
    on left: 65 66 67 68 69 70, on right: 63 64 66 68 70 138 139 140
    198 199
init_decl_s (99)
    on left: 71 72, on right: 64 72
init_decl (100)
    on left: 73 74, on right: 71 72
StorageSpec (101)
    on left: 75 76 77 78 79, on right: 65 66
TypeSpec (102)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91, on right: 67 68 105
    106
TypeQua (103)
    on left: 92 93, on right: 69 70 94 95 107 108
TypeQua_s (104)
    on left: 94 95, on right: 95 131 133
StructUnionSpec (105)
    on left: 96 97 98 99 100 101, on right: 89
struct_Declaration_s (106)
    on left: 102 103, on right: 96 97 99 100 103
struct_Declaration (107)
    on left: 104, on right: 102 103
SpecQua_s (108)
    on left: 105 106 107 108, on right: 104 105 107 143 144
struct_decl_s (109)
    on left: 109 110, on right: 104 110
struct_decl (110)
    on left: 111 112 113, on right: 109 110
EnumSpec (111)
    on left: 114 115 116, on right: 90
Enum_s (112)
    on left: 117 118, on right: 114 115 118
Enum (113)
    on left: 119 120, on right: 117 118
declarator (114)
    on left: 121 122, on right: 73 74 111 113 124 138 198 199 200 201
direct_decl (115)
    on left: 123 124 125 126 127 128 129, on right: 121 122 125 126
    127 128 129
pointer (116)
    on left: 130 131 132 133, on right: 121 132 133 145 147
ParamType_s (117)
    on left: 134 135, on right: 127 154 156
Param_s (118)
    on left: 136 137, on right: 134 135 137
Param_Declaration (119)
    on left: 138 139 140, on right: 136 137
Ident_s (120)
    on left: 141 142, on right: 128 142
type_name (121)
    on left: 143 144, on right: 25 27
abs_decl (122)
    on left: 145 146 147, on right: 139 144 148
direct_abs_decl (123)
    on left: 148 149 150 151 152 153 154 155 156, on right: 146 147
    151 152 155 156
Init (124)
    on left: 157 158 159, on right: 74 160 161
Init_s (125)
    on left: 160 161, on right: 158 159 161
Stmt (126)
    on left: 162 163 164 165 166 167 168 169 170 171 172 173 174 175
    176 177 178, on right: 162 163 164 168 169 170 171 172 173 191
    192
Exp1 (127)
    on left: 179 180, on right: 173
Exp2 (128)
    on left: 181 182, on right: 173
Exp3 (129)
    on left: 183 184, on right: 173
Block (130)
    on left: 185 186 187 188, on right: 165 202
Declaration_s (131)
    on left: 189 190, on right: 187 188 190 198 200
Stmt_s (132)
    on left: 191 192, on right: 186 188 192
TransUnit (133)
    on left: 193 194, on right: 0 194
ExternalDef (134)
    on left: 195 196, on right: 193 194
FunctionDef (135)
    on left: 197, on right: 195
FunctionDecl (136)
    on left: 198 199 200 201, on right: 197
FunctionBody (137)
    on left: 202, on right: 197


state 0

    0 $accept: . TransUnit $end

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    TYPE_NAME   shift, and go to state 3
    TYPEDEF     shift, and go to state 4
    EXTERN      shift, and go to state 5
    STATIC      shift, and go to state 6
    AUTO        shift, and go to state 7
    REGISTER    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    CONST       shift, and go to state 17
    VOLATILE    shift, and go to state 18
    VOID        shift, and go to state 19
    STRUCT      shift, and go to state 20
    UNION       shift, and go to state 21
    ENUM        shift, and go to state 22
    '('         shift, and go to state 23

    Declaration       go to state 24
    Declaration_Spec  go to state 25
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30
    declarator        go to state 31
    direct_decl       go to state 32
    pointer           go to state 33
    TransUnit         go to state 34
    ExternalDef       go to state 35
    FunctionDef       go to state 36
    FunctionDecl      go to state 37


state 1

  130 pointer: '*' .
  131        | '*' . TypeQua_s
  132        | '*' . pointer
  133        | '*' . TypeQua_s pointer

    '*'       shift, and go to state 1
    CONST     shift, and go to state 17
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 130 (pointer)

    TypeQua    go to state 38
    TypeQua_s  go to state 39
    pointer    go to state 40


state 2

  123 direct_decl: IDENTIFIER .

    $default  reduce using rule 123 (direct_decl)


state 3

   91 TypeSpec: TYPE_NAME .

    $default  reduce using rule 91 (TypeSpec)


state 4

   75 StorageSpec: TYPEDEF .

    $default  reduce using rule 75 (StorageSpec)


state 5

   76 StorageSpec: EXTERN .

    $default  reduce using rule 76 (StorageSpec)


state 6

   77 StorageSpec: STATIC .

    $default  reduce using rule 77 (StorageSpec)


state 7

   78 StorageSpec: AUTO .

    $default  reduce using rule 78 (StorageSpec)


state 8

   79 StorageSpec: REGISTER .

    $default  reduce using rule 79 (StorageSpec)


state 9

   81 TypeSpec: CHAR .

    $default  reduce using rule 81 (TypeSpec)


state 10

   82 TypeSpec: SHORT .

    $default  reduce using rule 82 (TypeSpec)


state 11

   83 TypeSpec: INT .

    $default  reduce using rule 83 (TypeSpec)


state 12

   84 TypeSpec: LONG .

    $default  reduce using rule 84 (TypeSpec)


state 13

   87 TypeSpec: SIGNED .

    $default  reduce using rule 87 (TypeSpec)


state 14

   88 TypeSpec: UNSIGNED .

    $default  reduce using rule 88 (TypeSpec)


state 15

   85 TypeSpec: FLOAT .

    $default  reduce using rule 85 (TypeSpec)


state 16

   86 TypeSpec: DOUBLE .

    $default  reduce using rule 86 (TypeSpec)


state 17

   92 TypeQua: CONST .

    $default  reduce using rule 92 (TypeQua)


state 18

   93 TypeQua: VOLATILE .

    $default  reduce using rule 93 (TypeQua)


state 19

   80 TypeSpec: VOID .

    $default  reduce using rule 80 (TypeSpec)


state 20

   96 StructUnionSpec: STRUCT . IDENTIFIER '{' struct_Declaration_s '}'
   97                | STRUCT . '{' struct_Declaration_s '}'
   98                | STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 41
    '{'         shift, and go to state 42


state 21

   99 StructUnionSpec: UNION . IDENTIFIER '{' struct_Declaration_s '}'
  100                | UNION . '{' struct_Declaration_s '}'
  101                | UNION . IDENTIFIER

    IDENTIFIER  shift, and go to state 43
    '{'         shift, and go to state 44


state 22

  114 EnumSpec: ENUM . '{' Enum_s '}'
  115         | ENUM . IDENTIFIER '{' Enum_s '}'
  116         | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 45
    '{'         shift, and go to state 46


state 23

  124 direct_decl: '(' . declarator ')'

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 23

    declarator   go to state 47
    direct_decl  go to state 32
    pointer      go to state 33


state 24

  196 ExternalDef: Declaration .

    $default  reduce using rule 196 (ExternalDef)


state 25

   63 Declaration: Declaration_Spec . ';'
   64            | Declaration_Spec . init_decl_s ';'
  198 FunctionDecl: Declaration_Spec . declarator Declaration_s
  199             | Declaration_Spec . declarator

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 23
    ';'         shift, and go to state 48

    init_decl_s  go to state 49
    init_decl    go to state 50
    declarator   go to state 51
    direct_decl  go to state 32
    pointer      go to state 33


state 26

   65 Declaration_Spec: StorageSpec .
   66                 | StorageSpec . Declaration_Spec

    TYPE_NAME  shift, and go to state 3
    TYPEDEF    shift, and go to state 4
    EXTERN     shift, and go to state 5
    STATIC     shift, and go to state 6
    AUTO       shift, and go to state 7
    REGISTER   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 65 (Declaration_Spec)

    Declaration_Spec  go to state 52
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30


state 27

   67 Declaration_Spec: TypeSpec .
   68                 | TypeSpec . Declaration_Spec

    TYPE_NAME  shift, and go to state 3
    TYPEDEF    shift, and go to state 4
    EXTERN     shift, and go to state 5
    STATIC     shift, and go to state 6
    AUTO       shift, and go to state 7
    REGISTER   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 67 (Declaration_Spec)

    Declaration_Spec  go to state 53
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30


state 28

   69 Declaration_Spec: TypeQua .
   70                 | TypeQua . Declaration_Spec

    TYPE_NAME  shift, and go to state 3
    TYPEDEF    shift, and go to state 4
    EXTERN     shift, and go to state 5
    STATIC     shift, and go to state 6
    AUTO       shift, and go to state 7
    REGISTER   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 69 (Declaration_Spec)

    Declaration_Spec  go to state 54
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30


state 29

   89 TypeSpec: StructUnionSpec .

    $default  reduce using rule 89 (TypeSpec)


state 30

   90 TypeSpec: EnumSpec .

    $default  reduce using rule 90 (TypeSpec)


state 31

  200 FunctionDecl: declarator . Declaration_s
  201             | declarator .

    TYPE_NAME  shift, and go to state 3
    TYPEDEF    shift, and go to state 4
    EXTERN     shift, and go to state 5
    STATIC     shift, and go to state 6
    AUTO       shift, and go to state 7
    REGISTER   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22

    $default  reduce using rule 201 (FunctionDecl)

    Declaration       go to state 55
    Declaration_Spec  go to state 56
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30
    Declaration_s     go to state 57


state 32

  122 declarator: direct_decl .
  125 direct_decl: direct_decl . '[' ConstExp ']'
  126            | direct_decl . '[' ']'
  127            | direct_decl . '(' ParamType_s ')'
  128            | direct_decl . '(' Ident_s ')'
  129            | direct_decl . '(' ')'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 122 (declarator)


state 33

  121 declarator: pointer . direct_decl

    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 23

    direct_decl  go to state 60


state 34

    0 $accept: TransUnit . $end
  194 TransUnit: TransUnit . ExternalDef

    $end        shift, and go to state 61
    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    TYPE_NAME   shift, and go to state 3
    TYPEDEF     shift, and go to state 4
    EXTERN      shift, and go to state 5
    STATIC      shift, and go to state 6
    AUTO        shift, and go to state 7
    REGISTER    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    CONST       shift, and go to state 17
    VOLATILE    shift, and go to state 18
    VOID        shift, and go to state 19
    STRUCT      shift, and go to state 20
    UNION       shift, and go to state 21
    ENUM        shift, and go to state 22
    '('         shift, and go to state 23

    Declaration       go to state 24
    Declaration_Spec  go to state 25
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30
    declarator        go to state 31
    direct_decl       go to state 32
    pointer           go to state 33
    ExternalDef       go to state 62
    FunctionDef       go to state 36
    FunctionDecl      go to state 37


state 35

  193 TransUnit: ExternalDef .

    $default  reduce using rule 193 (TransUnit)


state 36

  195 ExternalDef: FunctionDef .

    $default  reduce using rule 195 (ExternalDef)


state 37

  197 FunctionDef: FunctionDecl . FunctionBody

    '{'  shift, and go to state 63

    Block         go to state 64
    FunctionBody  go to state 65


state 38

   94 TypeQua_s: TypeQua .

    $default  reduce using rule 94 (TypeQua_s)


state 39

   95 TypeQua_s: TypeQua_s . TypeQua
  131 pointer: '*' TypeQua_s .
  133        | '*' TypeQua_s . pointer

    '*'       shift, and go to state 1
    CONST     shift, and go to state 17
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 131 (pointer)

    TypeQua  go to state 66
    pointer  go to state 67


state 40

  132 pointer: '*' pointer .

    $default  reduce using rule 132 (pointer)


state 41

   96 StructUnionSpec: STRUCT IDENTIFIER . '{' struct_Declaration_s '}'
   98                | STRUCT IDENTIFIER .

    '{'  shift, and go to state 68

    $default  reduce using rule 98 (StructUnionSpec)


state 42

   97 StructUnionSpec: STRUCT '{' . struct_Declaration_s '}'

    TYPE_NAME  shift, and go to state 3
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22

    TypeSpec              go to state 69
    TypeQua               go to state 70
    StructUnionSpec       go to state 29
    struct_Declaration_s  go to state 71
    struct_Declaration    go to state 72
    SpecQua_s             go to state 73
    EnumSpec              go to state 30


state 43

   99 StructUnionSpec: UNION IDENTIFIER . '{' struct_Declaration_s '}'
  101                | UNION IDENTIFIER .

    '{'  shift, and go to state 74

    $default  reduce using rule 101 (StructUnionSpec)


state 44

  100 StructUnionSpec: UNION '{' . struct_Declaration_s '}'

    TYPE_NAME  shift, and go to state 3
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22

    TypeSpec              go to state 69
    TypeQua               go to state 70
    StructUnionSpec       go to state 29
    struct_Declaration_s  go to state 75
    struct_Declaration    go to state 72
    SpecQua_s             go to state 73
    EnumSpec              go to state 30


state 45

  115 EnumSpec: ENUM IDENTIFIER . '{' Enum_s '}'
  116         | ENUM IDENTIFIER .

    '{'  shift, and go to state 76

    $default  reduce using rule 116 (EnumSpec)


state 46

  114 EnumSpec: ENUM '{' . Enum_s '}'

    IDENTIFIER  shift, and go to state 77

    Enum_s  go to state 78
    Enum    go to state 79


state 47

  124 direct_decl: '(' declarator . ')'

    ')'  shift, and go to state 80


state 48

   63 Declaration: Declaration_Spec ';' .

    $default  reduce using rule 63 (Declaration)


state 49

   64 Declaration: Declaration_Spec init_decl_s . ';'
   72 init_decl_s: init_decl_s . ',' init_decl

    ','  shift, and go to state 81
    ';'  shift, and go to state 82


state 50

   71 init_decl_s: init_decl .

    $default  reduce using rule 71 (init_decl_s)


state 51

   73 init_decl: declarator .
   74          | declarator . '=' Init
  198 FunctionDecl: Declaration_Spec declarator . Declaration_s
  199             | Declaration_Spec declarator .

    TYPE_NAME  shift, and go to state 3
    TYPEDEF    shift, and go to state 4
    EXTERN     shift, and go to state 5
    STATIC     shift, and go to state 6
    AUTO       shift, and go to state 7
    REGISTER   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    STRUCT     shift, and go to state 20
    UNION      shift, and go to state 21
    ENUM       shift, and go to state 22
    '='        shift, and go to state 83

    '{'       reduce using rule 199 (FunctionDecl)
    $default  reduce using rule 73 (init_decl)

    Declaration       go to state 55
    Declaration_Spec  go to state 56
    StorageSpec       go to state 26
    TypeSpec          go to state 27
    TypeQua           go to state 28
    StructUnionSpec   go to state 29
    EnumSpec          go to state 30
    Declaration_s     go to state 84


state 52

   66 Declaration_Spec: StorageSpec Declaration_Spec .

    $default  reduce using rule 66 (Declaration_Spec)


state 53

   68 Declaration_Spec: TypeSpec Declaration_Spec .

    $default  reduce using rule 68 (Declaration_Spec)


state 54

   70 Declaration_Spec: TypeQua Declaration_Spec .

    $default  reduce using rule 70 (Declaration_Spec)


state 55

  189 Declaration_s: Declaration .

    $default  reduce using rule 189 (Declaration_s)


state 56

   63 Declaration: Declaration_Spec . ';'
   64            | Declaration_Spec . init_decl_s ';'

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 23
    ';'         shift, and go to state 48

    init_decl_s  go to state 49
    init_decl    go to state 50
    declarator   go to state 85
    direct_decl  go to state 32
    pointer      go to state 33


state 57

  190 Declaration_s: Declaration_s . Declaration
  200 FunctionDecl: declarator Declaration_s .
